# poa

./: .gitignore
exercices/: CMakeLists.txt  main.cpp
exercices-java/src/ch/heigvd/: Main.java  TE.java
exercices-java/src/ch/heigvd/company/: Company.java  Data.java  Developer.java  Hobby.java  Language.java  Skill.java
exercices-java/src/ch/heigvd/dune/: Data.java  Extraction.java  Harvester.java  Printer.java  Resource.java
exercices/Array/: Array.hpp  Array_Impl.hpp  Array_impl.hpp
exercices/Jedi/: TE_canva.cpp
exercices/Musician/: Band.cpp  Band.hpp  Musician.cpp  Musician.hpp
exercices/Season/: Season.cpp  Season.hpp
exercices/SharedPointer/: SharedPointer.hpp  SharedPointer_Impl.hpp
exercices/TE1/: TE.cpp
labo1/: diagramme.sly
labo1/MatrixReloaded/: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.hpp  Multiply.cpp  Multiply.hpp  Operator.hpp  Subtract.hpp  Utils.cpp  Utils.hpp  main.cpp
labo1/MatrixReloaded/operators/: Add.cpp  Add.hpp  Multiply.cpp  Multiply.hpp  Operator.hpp  Subtract.cpp  Subtract.hpp
labo2/: squadron.sly
labo2/Squadron/: CMakeLists.txt  CargoShip.cpp  CargoShip.hpp  Ship.cpp  Ship.hpp  Shuttle.cpp  Shuttle.hpp  Squadron.cpp  Squadron.hpp  StarDreadnought.cpp  StarDreadnought.hpp  TIE.cpp  TIE.hpp  TIEFighter.cpp  TIEFighter.hpp  TIEInterceptor.cpp  TIEInterceptor.hpp  main.cpp
labo2/Squadron/ships/: Ship.cpp  Ship.hpp  ShipSpecs.cpp  ShipSpecs.hpp  TIEFighter.cpp  TIEFighter.hpp  TIEInterceptor.cpp  TIEInterceptor.hpp
labo2/Squadron/ships/cargo/: CargoShip.cpp  CargoShip.hpp  CargoShipSpecs.cpp  CargoShipSpecs.hpp  Shuttle.cpp  Shuttle.hpp  StarDreadnought.cpp  StarDreadnought.hpp
labo3/: riviere.sly
labo3/Riviere/: CMakeLists.txt  Controller.cpp  Controller.hpp  Test.cpp  Test.hpp  main.cpp
labo3/Riviere/containers/: Bank.cpp  Bank.hpp  Boat.cpp  Boat.hpp  Container.cpp  Container.hpp
labo3/Riviere/people/: Boy.cpp  Boy.hpp  ErrorStatus.hpp  Girl.cpp  Girl.hpp  IndependantPerson.cpp  IndependantPerson.hpp  Kid.cpp  Kid.hpp  Person.cpp  Person.hpp  Thief.cpp  Thief.hpp
labo3/Riviere/persons/: Boy.cpp  Boy.hpp  DependantPerson.cpp  DependantPerson.hpp  Girl.cpp  Girl.hpp  IndependantPerson.cpp  IndependantPerson.hpp  Kid.cpp  Kid.hpp  Person.cpp  Person.hpp  Thief.cpp  Thief.hpp
labo4/: UML.sly  code.txt
labo4/Buffy/: CMakeLists.txt  Controller.cpp  Controller.hpp  EndStatus.hpp  Field.cpp  Field.hpp  Field_Impl.hpp  main.cpp
labo4/Buffy/Utils/: Direction.cpp  Direction.hpp  Position.cpp  Position.hpp  Random.cpp  Random.hpp  Utils.cpp  Utils.hpp
labo4/Buffy/actions/: Action.cpp  Action.hpp  Kill.cpp  Kill.hpp  Move.cpp  Move.hpp  Transform.cpp  Transform.hpp
labo4/Buffy/actors/: ActorType.hpp  Buffy.cpp  Buffy.hpp  Human.cpp  Human.hpp  Humanoid.cpp  Humanoid.hpp  Vampire.cpp  Vampire.hpp
labo4/Buffy/displayers/: Color.hpp  Displayer.cpp  Displayer.hpp  MacDisplayer.cpp  MacDisplayer.hpp  UnixDisplayer.cpp  UnixDisplayer.hpp  WindowsDisplayer.cpp  WindowsDisplayer.hpp
labo4/Buffy/utils/: Position.cpp  Position.hpp  Random.cpp  Random.hpp
